force-app/main/default/objects/Customers__c/Customers__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>