force-app/main/default/objects/Customers__c/fields/Cash_Component__c.field-meta.xml
<CustomField>
    <fullName>Cash_Component__c</fullName>
    <label>Cash Component</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>