force-app/main/default/objects/Customers__c/fields/Customer_emailId__c.field-meta.xml
<CustomField>
    <fullName>Customer_emailId__c</fullName>
    <label>Customer emailId</label>
    <type>Email</type>
</CustomField>