force-app/main/default/objects/Customers__c/fields/Loan_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Loan_Mortgage__c</fullName>
    <label>Loan / Mortgage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>