force-app/main/default/objects/Customers__c/fields/Property_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Property_Interested_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Interested In</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>