force-app/main/default/objects/Customers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Interested_In__c</columns>
    <columns>Stage__c</columns>
    <columns>Phone_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>