force-app/main/default/objects/Customers__c/listViews/Deal_Closed.listView-meta.xml
<ListView>
    <fullName>Deal_Closed</fullName>
    <columns>NAME</columns>
    <columns>Property_Interested_In__c</columns>
    <columns>Phone_No__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Deal Closed</label>
</ListView>