force-app/main/default/objects/Customers__c/listViews/Non_Closed_deals.listView-meta.xml
<ListView>
    <fullName>Non_Closed_deals</fullName>
    <columns>NAME</columns>
    <columns>Customer_Price__c</columns>
    <columns>List_Price__c</columns>
    <columns>Property_Interested_In__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>contains</operation>
        <value>Open,In Negotiation,In Progress</value>
    </filters>
    <label>Non Closed deals</label>
</ListView>